--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": "true",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@rails/actiontext": "^8.0.300",
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
@@ -10,6 +11,7 @@
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "sass": "^1.93.2",
+    "trix": "^2.1.15",
     "yarn": "^1.22.22"
   },
   "scripts": {
