--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -10,9 +10,14 @@
 #     schedule: at 5am every day
 
 production:
-  clear_solid_queue_finished_jobs:
-    command: "SolidQueue::Job.clear_finished_in_batches(sleep_between_batches: 0.3)"
-    schedule: every hour at minute 12
+  # recalculate_posts_comments_count:
+  #   class: RecalculatePostsCommentsCountJob
+  #   queue: cron
+  #   schedule: every hour 
+  # create_commets:
+  #   class: CreateCommentsJob
+  #   queue: cron
+  #   schedule: every day
 
 development:
   recalculate_posts_comments_count:
